--- a/frontend/src/app/components/configuration/department/add-department/add-department.component.html
+++ b/frontend/src/app/components/configuration/department/add-department/add-department.component.html
@@ -15,6 +15,19 @@
         <input type="number" class="form-control" placeholder="level" name="deptLevel">
       </div>
 
+      <div class="form-group col-md-2" *ngIf="checkId();else other_content">
+        <button class="btn btn-success" (click)="onSubmit()">Insert</button>
+      </div>
+
+      <ng-template #other_content>
+        <div class="form-group col-md-2">
+          <button class="btn btn-success" (click)="onSubmit()">Update</button>
+        </div>
+      </ng-template>
+      <div class="form-group col-md-2">
+        <button class="btn btn-danger" (click)="reset()">Reset</button>
+      </div>
+
     </div>
 
     <table class="table table-striped">
@@ -27,8 +40,6 @@
       <tbody>
       <tr *ngFor="let dept of departments">
         <td>{{dept.departmentName}}</td>
-        <!--<td></td>-->
-        <!--<td></td>-->
         <td>
           <!--<button class="btn btn-danger" (click)="deleteUser(user)"> Delete</button>-->
           <button class="btn btn-danger" (click)="editDept(dept)" style="margin-left: 20px;"> Edit</button>
