--- a/frontend/src/app/components/configuration/shift/shift.component.html
+++ b/frontend/src/app/components/configuration/shift/shift.component.html
@@ -31,13 +31,10 @@
      </div>
 
   </div>
-  <div class="modal-footer">
-    <button type="button" class="btn btn-light" (click)="c('Close click')">Close</button>
-  </div>
 </ng-template>
 
 <!--modal end-->
-<div class="container-fluid">
+<div class="container">
   <div class="card">
     <div class="card-header">Shift Details</div>
 
