--- a/frontend/src/app/components/configuration/shift/shift.component.html
+++ b/frontend/src/app/components/configuration/shift/shift.component.html
@@ -9,26 +9,26 @@
   </div>
   <div class="modal-body">
 
-     <div class="row">
-        <div class="form-group col-md-6">
-            <label>Shift Name</label>
-            <input type="text" [(ngModel)]="shiftObj.shiftName" placeholder="shift" class="form-control">
-        </div>
-       <div class="form-group col-md-6">
-         <label>In Time</label>
-         <input type="time" [(ngModel)]="shiftObj.inTime" class="form-control">
-       </div>
-       <div class="form-group col-md-6">
-         <label>Out Time</label>
-         <input type="time" [(ngModel)]="shiftObj.outTime" class="form-control">
-       </div>
-       <div class="form-group col-md-12">
+    <div class="row">
+      <div class="form-group col-md-6">
+        <label>Shift Name</label>
+        <input type="text" [(ngModel)]="shiftObj.shiftName" placeholder="shift" class="form-control">
+      </div>
+      <div class="form-group col-md-6">
+        <label>In Time</label>
+        <input type="time" [(ngModel)]="shiftObj.inTime" class="form-control">
+      </div>
+      <div class="form-group col-md-6">
+        <label>Out Time</label>
+        <input type="time" [(ngModel)]="shiftObj.outTime" class="form-control">
+      </div>
+      <div class="form-group col-md-12">
 
-       <button class="btn btn-success pull-right" (click)="onSubmit()">Submit</button>
-       </div>
+        <button class="btn btn-success pull-right" (click)="onSubmit()">Submit</button>
+      </div>
 
 
-     </div>
+    </div>
 
   </div>
 </ng-template>
@@ -40,42 +40,25 @@
 
     <div class="card-body">
       <a style=" float: right" class="btn btn-outline-primary mb-2 mr-2" (click)="openLg(content)" >Add New</a>  <br><br>
-      <!--<table datatable  id="example" class="table" [dtOptions]="dtOptions" [dtTrigger]="dtTeigger">-->
-        <!--<thead>-->
-        <!--<tr>-->
-          <!--<th>Shift Name</th>-->
-          <!--<th>In Time</th>-->
-          <!--<th>Out Time</th>-->
-          <!--<th>Action</th>-->
-        <!--</tr>-->
-
-        <!--</thead>-->
-        <!--<tbody >-->
-
-        <!--<tr  *ngFor="let shift of shifts" >-->
-          <!--<td>{{shift.shiftName}}</td>-->
-          <!--<td>{{shift.inTime}}</td>-->
-          <!--<td>{{shift.outTime}}</td>-->
-          <!--<td>  <button class="btn btn-info" (click)="edit(shift.shiftId,content)"> Edit</button></td>-->
-
-        <!--</tr>-->
-        <!--<tr *ngIf="shifts?.length == 0">-->
-          <!--<td colspan="3" class="no-data-available">No data!</td>-->
-        <!--</tr>-->
-
-        <!--</tbody>-->
-
-      <!--</table>-->
-      <table datatable class="table" [dtOptions]="dtOptions">
+      <table datatable  id="example" class="table" [dtOptions]="dtOptions" [dtTrigger]="dtTeigger">
         <thead>
         <tr>
           <th>Shift Name</th>
           <th>In Time</th>
           <th>Out Time</th>
+          <th>Action</th>
         </tr>
-        </thead>
 
-        <tbody>
+        </thead>
+        <tbody >
+
+        <tr  *ngFor="let shift of shifts" >
+          <td>{{shift.shiftName}}</td>
+          <td>{{shift.inTime}}</td>
+          <td>{{shift.outTime}}</td>
+          <td>  <button class="btn btn-info" (click)="edit(shift.shiftId,content)"> Edit</button></td>
+
+        </tr>
 
         </tbody>
 
