--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -159,10 +159,11 @@
             <a href="#"><i class="ti-bookmark-alt"></i>Components</a>
             <ul class="submenu">
               <li class="has-submenu">
-                <a href="#">Forms</a>
+                <a href="#">Shift</a>
                 <ul class="submenu">
-                  <!--<li><a routerLink="configuration/department/add">Add Department</a></li>-->
-                  <li><a routerLink="configuration/shift">Shift</a></li>
+
+                  <li><a routerLink="configuration/shift">All Shift</a></li>
+                  <li><a routerLink="configuration/shift/assign">Shift Assign</a></li>
                 </ul>
               </li>
 
