--- a/frontend/src/app/components/configuration/shift-assign/shift-assign.component.html
+++ b/frontend/src/app/components/configuration/shift-assign/shift-assign.component.html
@@ -17,8 +17,26 @@
         <div class="form-group col-md-4">
           <label>Start Date</label>
           <input bsDatepicker
-                 [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD' }"  name="resignDate" class="form-control">
+                 [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD' }"  name="resignDate" [(ngModel)]="startDate" class="form-control">
         </div>
+
+        <div class="form-group col-md-4">
+          <label>Weekend</label>
+          <ng-multiselect-dropdown
+                  [placeholder]="'Select Weekend'"
+                  [data]="dropdownList"
+                  [(ngModel)]="selectedItems"
+                  [settings]="dropdownSettings"
+                  (onSelect)="onItemSelect($event)"
+                  (onSelectAll)="onSelectAll($event)"
+          >
+          </ng-multiselect-dropdown>
+        </div>
+
+        <div class="form-group col-md-4">
+          <button class="btn btn-success btn-sm" (click)="assignShift()">Assign</button>
+        </div>
+
       </div>
 
 
@@ -29,8 +47,9 @@
           <th style="text-align: center"><input type="checkbox" class="SelectAll" id="selectall2"  (click)="selectAll()"/></th>
           <th>Name</th>
           <th>Employee ID</th>
-          <th>Degisnation</th>
-          <th>Department</th>
+          <th>Shift Name</th>
+          <th>Weekend</th>
+          <th>Shift Start</th>
 
         </tr>
         </thead>
