--- a/frontend/src/app/components/user/basic-info/basic-info.component.html
+++ b/frontend/src/app/components/user/basic-info/basic-info.component.html
@@ -90,6 +90,10 @@
                 <label>Contact Number</label>
                 <input type="text" class="form-control" name="contactNo" placeholder="phone" [(ngModel)]="employeeBasicForm.contactNo" required>
             </div>
+            <div class="form-group col-md-4">
+                <label>Alternative Number</label>
+                <input type="text" class="form-control" name="contactNo" placeholder="alternative phone" [(ngModel)]="employeeBasicForm.alterContactNo" required>
+            </div>
 
             <div class="form-group col-md-4">
                 <label>Date Of Birth</label>
