--- a/frontend/src/app/components/user/joining-info/joining-info.component.html
+++ b/frontend/src/app/components/user/joining-info/joining-info.component.html
@@ -28,6 +28,16 @@
       </div>
 
       <div class="form-group col-md-6">
+        <label>Supervisor</label>
+        <input type="text" name="supervisor" placeholder="name" [(ngModel)]="employeeJoiningForm.supervisor" class="form-control">
+      </div>
+
+      <div class="form-group col-md-6">
+        <label>Probation Period</label>
+        <input type="text" name="probationPeriod" placeholder="month" [(ngModel)]="employeeJoiningForm.probationPeriod" class="form-control">
+      </div>
+
+      <div class="form-group col-md-6">
         <label>Weekend</label>
         <input type="text" name="weekend" placeholder="day" [(ngModel)]="employeeJoiningForm.weekend" class="form-control">
       </div>
