--- a/frontend/src/app/components/user/basic-info/basic-info.component.html
+++ b/frontend/src/app/components/user/basic-info/basic-info.component.html
@@ -131,4 +131,11 @@
 
         </div>
     </div>
+
+</div>
+<div class="col-md-12">
+    <hr>
+</div>
+<div>
+    <app-emergency-contact></app-emergency-contact>
 </div>
