--- a/frontend/src/app/components/user/basic-info/basic-info.component.html
+++ b/frontend/src/app/components/user/basic-info/basic-info.component.html
@@ -137,5 +137,5 @@
     <hr>
 </div>
 <div>
-    <app-emergency-contact></app-emergency-contact>
+    <app-emergency-contact [empid]="empid"></app-emergency-contact>
 </div>
