--- a/frontend/src/app/components/user/emergency-contact/emergency-contact.component.html
+++ b/frontend/src/app/components/user/emergency-contact/emergency-contact.component.html
@@ -5,7 +5,10 @@
     </h4>
   </div>
   <div class="card-body">
-      <div class="row">
+    <div *ngFor="let p of error" class="alert alert-secondary" role="alert">
+      {{p}}
+    </div>
+    <div class="row">
         <div class="form-group col-md-4">
 
           <label >First Name</label>
@@ -39,7 +42,11 @@
         </div>
         <div class="form-group col-md-4">
           <label>Address</label>
-          <textarea class="form-control"></textarea>
+          <textarea class="form-control" [(ngModel)]="emergencyForm.address"></textarea>
+        </div>
+
+        <div class="form-group col-md-12">
+          <button class="btn btn-success pull-right" (click)="submitForm()">Submit</button>
         </div>
 
       </div>
