--- a/frontend/src/app/components/user/employee/employee.component.html
+++ b/frontend/src/app/components/user/employee/employee.component.html
@@ -4,7 +4,7 @@
 
     <div class="card-body">
       <a style=" float: right" class="btn btn-outline-primary mb-2 mr-2" routerLink="add" >Add New</a>  <br><br>
-      <table datatable class="table" [dtOptions]="dtOptions" [dtTrigger]="dtTeigger">
+      <table datatable class="table" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
         <thead>
         <tr>
           <th>Name</th>
