--- a/frontend/src/app/components/user/user-document/user-document.component.html
+++ b/frontend/src/app/components/user/user-document/user-document.component.html
@@ -6,15 +6,16 @@
         <!--{{ index }}-->
       <!--</li>-->
     <!--</ul>-->
-    <div class="row" *ngFor="let index of formNumber">
+    <div class="row" *ngFor="let index of userDocumentFormArray;let i = index">
       <div class="form-group col-md-6">
+
         <label>Name</label>
-        <input type="text" placeholder="title" class="form-control" [(ngModel)]="userDocumentFormArray[index].name">
+        <input type="text" placeholder="title" class="form-control" [(ngModel)]="index.name">
       </div>
 
       <div class="form-group col-md-6">
         <label>Document</label>
-        <input type="text" placeholder="title" class="form-control" [(ngModel)]="userDocumentFormArray[index].document">
+        <input type="file" class="form-control" name="photo" placeholder="document" (change)="onFileSelected(i,$event)">
       </div>
 
     </div>
