--- a/frontend/src/app/components/user/basic-info/basic-info.component.html
+++ b/frontend/src/app/components/user/basic-info/basic-info.component.html
@@ -123,7 +123,7 @@
             </div>
 
 
-             <img class="thumb-md" *ngIf="employeeBasicForm.photo" [src]="employeeBasicForm.photo" height="250" width="250">
+             <img  *ngIf="employeeBasicForm.photo" [src]="employeeBasicForm.photo" height="200" width="200">
 
 
 
