--- a/frontend/src/app/components/user/joining-info/joining-info.component.html
+++ b/frontend/src/app/components/user/joining-info/joining-info.component.html
@@ -38,9 +38,19 @@
       </div>
 
       <div class="form-group col-md-6">
+
+        <!--<input type="text" name="weekend" placeholder="day" [(ngModel)]="employeeJoiningForm.weekend" class="form-control">-->
         <label>Weekend</label>
-        <input type="text" name="weekend" placeholder="day" [(ngModel)]="employeeJoiningForm.weekend" class="form-control">
+        <ng-multiselect-dropdown
+                [placeholder]="'Select Weekend'"
+                [data]="dropdownList"
+                [(ngModel)]="selectedItems"
+                [settings]="dropdownSettings"
+
+        >
+        </ng-multiselect-dropdown>
       </div>
+
 
       <div class="form-group col-md-3">
         <label>Access Pin</label>
