--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -167,9 +167,8 @@
               <li class="has-submenu">
                 <a href="#">Leave</a>
                 <ul class="submenu">
-
-                  <li><a routerLink="configuration/leave">Lave</a></li>
-
+                  <li><a routerLink="configuration/leave">Apply Lave</a></li>
+                  <li><a routerLink="configuration/leave/show">Show Lave</a></li>
                 </ul>
               </li>
 
