--- a/frontend/src/app/components/user/employee/employee.component.html
+++ b/frontend/src/app/components/user/employee/employee.component.html
@@ -8,9 +8,10 @@
         <thead>
         <tr>
           <th>First Name</th>
+          <th>Middle Name</th>
           <th>Last Name</th>
           <th>Employee ID</th>
-          <th>Degisnation</th>
+          <th>Designation</th>
           <th>Department</th>
           <th>Action</th>
         </tr>
