--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -197,6 +197,17 @@
             </ul>
           </li>
 
+
+          <li class="has-submenu" routerLinkActive="active">
+            <a routerLink="#" ><i class="fa fa-chart"></i>Report</a>
+            <ul class="submenu">
+              <li class="">
+                <a routerLink="report/attendance">Attendance</a>
+
+              </li>
+            </ul>
+          </li>
+
           <!--<li class="has-submenu">-->
             <!--<a href="#"><i class="ti-files"></i>Pages</a>-->
             <!--<ul class="submenu megamenu">-->
