--- a/frontend/src/app/components/report/attendance/attendance.component.html
+++ b/frontend/src/app/components/report/attendance/attendance.component.html
@@ -2,6 +2,30 @@
   <div class="card">
     <div class="card-header"></div>
     <div class="card-body">
+      <div class="row">
+        <div class="form-group col-md-3">
+          <label>From</label>
+          <input class="form-control"
+                 bsDatepicker
+                 [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD'}" id="startDate">
+        </div>
+        <div class="form-group col-md-3">
+          <label>To</label>
+          <input class="form-control"
+                 bsDatepicker
+                 [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD'}"
+                 id="endDate"
+          >
+        </div>
+
+        <div class="form-group">
+          <br>
+
+          <button class="btn btn-success" (click)="search()">Search</button>
+        </div>
+
+      </div>
+      <hr>
 
       <table datatable class="table" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
         <thead>
