--- a/frontend/src/app/components/user/joining-info/joining-info.component.html
+++ b/frontend/src/app/components/user/joining-info/joining-info.component.html
@@ -46,6 +46,8 @@
                 [data]="dropdownList"
                 [(ngModel)]="selectedItems"
                 [settings]="dropdownSettings"
+                (onSelect)="onItemSelect($event)"
+                (onDeSelect)="onItemDeSelect($event)"
 
         >
         </ng-multiselect-dropdown>
