--- a/frontend/src/app/components/user/joining-info/joining-info.component.html
+++ b/frontend/src/app/components/user/joining-info/joining-info.component.html
@@ -55,7 +55,7 @@
 
 
       <div class="form-group col-md-3">
-        <label>Access Pin</label>
+        <label>Card Number</label>
         <input type="text" name="accessPin" placeholder="pin" [(ngModel)]="employeeJoiningForm.accessPin" class="form-control">
       </div>
       <div class="form-group col-md-3">
