--- a/frontend/src/app/components/report/attendance/attendance.component.html
+++ b/frontend/src/app/components/report/attendance/attendance.component.html
@@ -33,6 +33,7 @@
           <th>First Name</th>
           <th>Middle Name</th>
           <th>Last Name</th>
+          <th>Department</th>
           <th>Total Attendance</th>
           <th>Total Late</th>
           <th>Average Working hour</th>
