--- a/frontend/src/app/components/configuration/shift-assign/shift-assign.component.html
+++ b/frontend/src/app/components/configuration/shift-assign/shift-assign.component.html
@@ -45,7 +45,9 @@
         <thead>
         <tr>
           <th style="text-align: center"><input type="checkbox" class="SelectAll" id="selectall2"  (click)="selectAll()"/></th>
-          <th>Name</th>
+          <th>First Name</th>
+          <th>Middle Name</th>
+          <th>Last Name</th>
           <th>Employee ID</th>
           <th>Shift Name</th>
           <th>Weekend</th>
