--- a/frontend/src/app/components/report/attendance/attendance.component.html
+++ b/frontend/src/app/components/report/attendance/attendance.component.html
@@ -38,6 +38,8 @@
           <th>Total Late</th>
           <th>Average Working hour</th>
           <th>Total Leave</th>
+          <th>Weekend Count</th>
+          <th>Weekend</th>
           <th>Action</th>
         </tr>
 
