--- a/frontend/src/app/components/configuration/leave/leave.component.html
+++ b/frontend/src/app/components/configuration/leave/leave.component.html
@@ -33,6 +33,16 @@
         </div>
 
         <div class="form-group col-md-3">
+          <label>Team</label>
+          <select class="form-control" name="shift" id="team"  (change)="selectTeam($event.target.value)">
+            <option value="">Select Team</option>
+            <option *ngFor="let tm of team" [value]="tm.teamId">
+              {{tm.teamName}}
+            </option>
+          </select>
+        </div>
+
+        <div class="form-group col-md-3">
           <label>Remark</label>
           <textarea class="form-control input" [(ngModel)]="remark" placeholder="remark"></textarea>
         </div>
@@ -56,6 +66,7 @@
           <th>Shift Name</th>
           <th>Weekend</th>
           <th>Shift Start</th>
+          <th>Team</th>
 
         </tr>
         </thead>
