--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -208,6 +208,18 @@
             </ul>
           </li>
 
+
+          <li class="has-submenu" routerLinkActive="active">
+            <a routerLink="#" ><i class="fa fa-chart"></i>Team</a>
+            <ul class="submenu">
+              <li class="">
+                <a routerLink="team/show">Show Team</a>
+                <a routerLink="team/assign">Assign Team</a>
+
+              </li>
+            </ul>
+          </li>
+
           <!--<li class="has-submenu">-->
             <!--<a href="#"><i class="ti-files"></i>Pages</a>-->
             <!--<ul class="submenu megamenu">-->
