--- a/frontend/src/app/components/report/attendance/attendance.component.html
+++ b/frontend/src/app/components/report/attendance/attendance.component.html
@@ -18,6 +18,8 @@
           >
         </div>
 
+
+
         <div class="form-group">
           <br>
 
@@ -30,9 +32,9 @@
       <table datatable class="table" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
         <thead>
         <tr>
-          <th>First Name</th>
-          <th>Middle Name</th>
-          <th>Last Name</th>
+          <th>Name</th>
+          <!--<th>Middle Name</th>-->
+          <!--<th>Last Name</th>-->
           <th>Department</th>
           <th>Total Attendance</th>
           <th>Total Late</th>
