--- a/frontend/src/app/components/user/joining-info/joining-info.component.html
+++ b/frontend/src/app/components/user/joining-info/joining-info.component.html
@@ -96,6 +96,9 @@
         <input type="time" name="scheduleOutTime" placeholder="out time" [(ngModel)]="employeeJoiningForm.scheduleOutTime" class="form-control" readonly>
       </div>
 
+
+
+
       <div class="form-group col-md-6">
         <label>Special Allowance</label>
         &nbsp;<input type="checkbox" name="specialAllowance" [(ngModel)]="employeeJoiningForm.specialAllowance">
@@ -106,6 +109,28 @@
 
       <div class="col-md-12">
         <button class="btn btn-success" (click)="submit()">Save</button>
+      </div>
+
+
+      <!--Leave Limit-->
+      <div class="form-group col-md-12">
+        <h5 align="center">Leave Limit</h5>
+        <hr>
+      </div>
+
+      <div class="form-group col-md-6">
+        <label>Total Leave</label>
+        <input type="text" [(ngModel)]="totalLeaveAssigned"  placeholder="total leave" class="form-control">
+      </div>
+
+
+      <div class="form-group col-md-6">
+        <label>Leave Taken</label>
+        <input type="number" [(ngModel)]="leaveTaken"  placeholder="total leave taken" class="form-control" readonly>
+      </div>
+
+      <div class="col-md-12">
+        <button class="btn btn-success" (click)="submitLeaveLimit()">Save Leave Limit</button>
       </div>
 
 
