--- a/frontend/src/app/components/report/attendance/attendance.component.html
+++ b/frontend/src/app/components/report/attendance/attendance.component.html
@@ -20,10 +20,17 @@
 
 
 
-        <div class="form-group">
+        <div class="form-group col-md-3">
           <br>
 
           <button class="btn btn-success" (click)="search()">Search</button>
+        </div>
+
+
+        <div class="form-group col-md-3">
+          <br>
+
+          <button class="btn btn-info pull-right" (click)="generateExcel()">Generate Report</button>
         </div>
 
       </div>
