--- a/frontend/src/app/components/user/joining-info/joining-info.component.html
+++ b/frontend/src/app/components/user/joining-info/joining-info.component.html
@@ -54,18 +54,23 @@
       </div>
 
 
-      <div class="form-group col-md-3">
+      <div class="form-group col-md-4">
         <label>Card Number</label>
         <input type="text" name="accessPin" placeholder="pin" [(ngModel)]="employeeJoiningForm.accessPin" class="form-control">
       </div>
-      <div class="form-group col-md-3">
+      <div class="form-group col-md-4">
         <label>Attendance Device Pin</label>
         <input type="text" name="accessPin" placeholder="pin" [(ngModel)]="employeeJoiningForm.attDeviceUserId" class="form-control">
       </div>
 
+      <div class="form-group col-md-4">
+        <label>Practice</label>
+        <input type="number" name="practice" placeholder="days" [(ngModel)]="employeeJoiningForm.practice"  class="form-control">
+      </div>
 
 
-      <div class="form-group col-md-6">
+
+      <div class="form-group col-md-4">
         <label>Shift</label>
         <select class="form-control" name="shift"   (change)="selectShift($event.target.value)">
           <option value="">Select Shift</option>
@@ -86,12 +91,12 @@
       <!--</div>-->
 
 
-      <div class="form-group col-md-6">
+      <div class="form-group col-md-4">
         <label>Schedule In Time</label>
         <input type="time" name="scheduleInTime" placeholder="in time" [(ngModel)]="employeeJoiningForm.scheduleInTime" class="form-control" readonly>
       </div>
 
-      <div class="form-group col-md-6">
+      <div class="form-group col-md-4">
         <label>Schedule Out Time</label>
         <input type="time" name="scheduleOutTime" placeholder="out time" [(ngModel)]="employeeJoiningForm.scheduleOutTime" class="form-control" readonly>
       </div>
