--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -226,7 +226,8 @@
             <ul class="submenu">
               <li class="">
                 <a routerLink="payroll/payhead">Pay Head</a>
-                <!--<a routerLink="team/assign">Assign Team</a>-->
+                <a routerLink="payroll/salary-sheet">Salary Sheet</a>
+                <a routerLink="payroll/pay-advance">Advance Payment</a>
 
               </li>
             </ul>
