--- a/frontend/src/app/components/payroll/pay-advance/pay-advance.component.html
+++ b/frontend/src/app/components/payroll/pay-advance/pay-advance.component.html
@@ -33,7 +33,7 @@
         <div class="row" style="padding: 20px;">
             <div class="form-group col-md-12">
                 <label>Employee</label>
-                <input class="form-control" placeholder="name" value="Farzad" type="text" [(ngModel)]="payAdvanceModel.empName" readonly>
+                <input class="form-control" placeholder="name" type="text" [(ngModel)]="payAdvanceModel.empName" readonly>
             </div>
             <div class="form-group col-md-6">
                 <label>Advance Date</label>
@@ -77,16 +77,6 @@
                 <button class="btn btn-info pull-right" (click)="payAdvanceSubmit()">Submit</button>
             </div>
         </div>
-
-
-
-
-
-
-
-
-
-
 
 
 
