--- a/frontend/src/app/components/payroll/pay-head/pay-head.component.html
+++ b/frontend/src/app/components/payroll/pay-head/pay-head.component.html
@@ -47,6 +47,7 @@
 </ng-template>
 
 
+<div class="container">
 
 
 <div class="card">
@@ -138,4 +139,6 @@
 
         </table>
     </div>
+</div>
+
 </div>
