--- a/frontend/src/app/components/payroll/pay-salary-sheet/pay-salary-sheet.component.html
+++ b/frontend/src/app/components/payroll/pay-salary-sheet/pay-salary-sheet.component.html
@@ -91,16 +91,16 @@
 
       <div class="form-group col-md-6">
         <label>Payhead</label>
-        <input class="form-control" placeholder="name" type="text" [(ngModel)]="payAdvanceModel.payhead" readonly>
+        <input class="form-control" placeholder="head" type="text" [(ngModel)]="subsheetModel.payhead" readonly>
       </div>
 
       <div class="form-group col-md-6">
         <label>Amount</label>
-        <input class="form-control" placeholder="name" type="text" [(ngModel)]="payAdvanceModel.amount">
+        <input class="form-control" placeholder="name" type="text" [(ngModel)]="subsheetModel.amount">
       </div>
       <div class="form-group col-md-12">
         <label>Description</label>
-        <input class="form-control" placeholder="" type="text" [(ngModel)]="payAdvanceModel.description">
+        <input class="form-control" placeholder="" type="text" [(ngModel)]="subsheetModel.description">
       </div>
 
 
