--- a/frontend/src/app/components/leave/add-leave/add-leave.component.html
+++ b/frontend/src/app/components/leave/add-leave/add-leave.component.html
@@ -1,34 +1,56 @@
-<div class="card">
-  <div class="card-header-pills">
-    <h3 align="center" style="font-family: 'Righteous', cursive;">Leave</h3>
-  </div>
-  <div class="card-body">
-    <div class="row">
-
-      <div class="form-group col-md-6">
-        <label>Start Date</label>
-        <input type="date" class="form-control">
-      </div>
-
-      <div class="form-group col-md-6">
-        <label>End Date</label>
-        <input type="date" class="form-control">
-      </div>
-
-
-      <div class="form-group col-md-6">
-        <label>Leave Category</label>
-        <select class="form-control" name="fkLeaveCategory">
-          <option>Category 1</option>
-          <option>Category 2</option>
-          <option>Category 3</option>
-        </select>
-      </div>
-
-
-
-
+<div class="container">
+  <div class="card">
+    <div class="card-header-pills">
+      <h3 align="center" style="font-family: 'Righteous', cursive;">Leave</h3>
     </div>
+    <div class="card-body">
+      <div class="row">
+
+        <div class="form-group col-md-3">
+          <label>Start Date</label>
+          <input bsDatepicker
+                 [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD' }"  name="resignDate" [(ngModel)]="employee.startDate" class="form-control input" placeholder="start">
+        </div>
+
+        <div class="form-group col-md-3">
+          <label>End Date</label>
+          <input bsDatepicker
+                 [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD' }"  name="resignDate" [(ngModel)]="employee.endDate" class="form-control input" placeholder="end">
+        </div>
+
+
+        <div class="form-group col-md-3">
+          <label>No Of Days</label>
+          <input type="number" class="form-control input" [(ngModel)]="employee.noOfDays" placeholder="number of days">
+        </div>
+
+
+        <div class="form-group col-md-3">
+          <label>Leave Category</label>
+          <select class="form-control input" name="fkLeaveCategory" [(ngModel)]="employee.fkLeaveCategory">
+            <option value="" selected>Select Category</option>
+            <option *ngFor="let lc of leaveCategories" [value]="lc.id">
+              {{lc.categoryName}}
+            </option>
+          </select>
+        </div>
+
+        <div class="form-group col-md-4">
+          <label>Remark</label>
+          <textarea class="form-control input" [(ngModel)]="employee.remark" placeholder="cause"></textarea>
+        </div>
+
+        <div class="form-group col-md-3">
+          <button class="btn btn-success btn-sm" (click)="assignLeave()">Assign</button>
+        </div>
+
+
+
+
+
+      </div>
+    </div>
+
   </div>
 
 </div>
