--- a/frontend/src/app/components/configuration/show-leave/show-leave.component.html
+++ b/frontend/src/app/components/configuration/show-leave/show-leave.component.html
@@ -1,3 +1,76 @@
+<!--modal-->
+<!-- The Modal -->
+<div class="modal" id="myModal">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content ">
+
+      <!-- Modal Header -->
+      <div class="modal-header">
+        <h4 class="modal-title">Edit</h4>
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+      </div>
+
+      <!-- Modal body -->
+      <div class="modal-body">
+        <div class="row">
+          <div class="form-group col-md-6">
+            <label>Name</label>
+            <input class="form-control" readonly value="{{employee.firstName+' '+employee.lastName}}">
+          </div>
+          <div class="form-group col-md-6">
+            <label>Start Date</label>
+            <input bsDatepicker
+                   [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD' }"  name="resignDate" [(ngModel)]="employee.startDate" class="form-control input" placeholder="start">
+          </div>
+
+          <div class="form-group col-md-6">
+            <label>End Date</label>
+            <input bsDatepicker
+                   [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD' }"  name="resignDate" [(ngModel)]="employee.endDate" class="form-control input" placeholder="end">
+          </div>
+
+
+          <div class="form-group col-md-6">
+            <label>No Of Days</label>
+            <input type="number" class="form-control input" [(ngModel)]="employee.noOfDays" placeholder="number of days">
+          </div>
+
+          <div class="form-group col-md-6">
+            <label>Leave Category</label>
+            <select class="form-control input" name="fkLeaveCategory" [(ngModel)]="employee.fkLeaveCategory">
+              <option value="" selected>Select Category</option>
+              <option *ngFor="let lc of leaveCategories" [value]="lc.id">
+                {{lc.categoryName}}
+              </option>
+            </select>
+          </div>
+
+          <div class="form-group col-md-6">
+            <label>Remark</label>
+            <textarea class="form-control input" [(ngModel)]="employee.remarks" placeholder="cause"></textarea>
+          </div>
+          <div class="form-group col-md-12">
+            <button class="btn btn-success btn-sm" (click)="updateLeave()">Update</button>
+          </div>
+
+
+
+
+
+        </div>
+      </div>
+
+      <!-- Modal footer -->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+
+
 <div class="card">
   <div class="card-header">
     Showing Leave Requests
@@ -5,7 +78,7 @@
 
   <div class="card-body">
 
-    <table datatable class="table" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
+    <table datatable class="table table-striped table-bordered" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
       <thead>
       <tr>
         <th>First Name</th>
@@ -14,6 +87,7 @@
         <th>End</th>
         <th>Days</th>
         <th>Status</th>
+        <th>Action</th>
 
       </tr>
       </thead>
