--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -216,7 +216,6 @@
               <li class="">
                 <a routerLink="team/show">Show Team</a>
                 <a routerLink="team/assign">Assign Team</a>
-
               </li>
             </ul>
           </li>
@@ -226,6 +225,7 @@
             <a routerLink="#" ><i class="fa fa-chart"></i>Payroll</a>
             <ul class="submenu">
               <li class="">
+                <a routerLink="payroll/pay-grade">Pay Grade</a>
                 <a routerLink="payroll/payhead">Pay Head</a>
                 <a routerLink="payroll/salary-sheet">Salary Sheet</a>
                 <a routerLink="payroll/pay-advance">Advance Payment</a>
