--- a/frontend/src/app/components/payroll/pay-grade/pay-grade.component.html
+++ b/frontend/src/app/components/payroll/pay-grade/pay-grade.component.html
@@ -1,15 +1,17 @@
 <div class="container">
   <div class="card">
     <div class="card-body">
+      <h4 align="center">Pay-grade Setup</h4>
         <div class="row">
           <div class="form-group col-md-6">
-            <label>Head</label>
-            <select class="form-control" placeholder="pay-head" name="gradeTitle" [ngModel]="payGradeModel.gradeTitle">
-              <option value="">Select Payhead</option>
-              <option *ngFor="let data of payHeads" [value]="data.id">
-                {{data.allowDeducTitle}}
-              </option>
-            </select>
+            <label>Title</label>
+            <input class="form-control" placeholder="pay-grade" name="gradeTitle" [ngModel]="payGradeModel.gradeTitle">
+            <!--<select class="form-control" placeholder="pay-head" name="gradeTitle" [ngModel]="payGradeModel.gradeTitle">-->
+              <!--<option value="">Select Payhead</option>-->
+              <!--<option *ngFor="let data of payHeads" [value]="data.id">-->
+                <!--{{data.allowDeducTitle}}-->
+              <!--</option>-->
+            <!--</select>-->
           </div>
           <div class="form-group col-md-6">
             <label>BASIC</label>
@@ -36,8 +38,47 @@
             <label>DESCRIPTION</label>
             <input class="form-control" placeholder="description" name="DESCRIPTION" [ngModel]="payGradeModel.DESCRIPTION">
           </div>
+          <div class="form-group col-md-12">
+            <button class="btn btn-success btn-sm pull-right" (click)="insertPaygrade()">Insert</button>
+          </div>
 
         </div>
+
+<!--=================================Details========================================-->
+      <hr>
+      <h4 align="center">Pay-grade Details</h4>
+      <div class="row">
+
+        <div class="form-group col-md-6">
+          <label>Pay Grade</label>
+          <select class="form-control" name="fkGradeParentId" [ngModel]="payDetailsModel.fkGradeParentId">
+            <option value="">Select Pay-grade</option>
+          </select>
+        </div>
+
+
+        <div class="form-group col-md-6">
+          <label>Head</label>
+          <select class="form-control" name="fkPayHeadId" [ngModel]="payDetailsModel.fkPayHeadId">
+          <option value="">Select Payhead</option>
+          <option *ngFor="let data of payHeads" [value]="data.id">
+            {{data.allowDeducTitle}}
+          </option>
+          </select>
+        </div>
+
+
+        <div class="form-group col-md-6">
+          <label>Percent Of Basic</label>
+          <input type="number" class="form-control" placeholder="%" name="percentOfBasic" [ngModel]="payDetailsModel.percentOfBasic">
+        </div>
+
+        <div class="form-group col-md-12">
+          <button class="btn btn-success btn-sm pull-right" (click)="insertPaygradeDetails()">Insert</button>
+        </div>
+      </div>
+
+
     </div>
   </div>
 </div>
