--- a/frontend/src/app/components/user/salary-info/salary-info.component.html
+++ b/frontend/src/app/components/user/salary-info/salary-info.component.html
@@ -1,26 +1,38 @@
 <div class="card">
   <div class="card-header">
+    Pay-grade Setup
+  </div>
+  <div class="card-body">
+    <div class="row">
+      <div class="form-group col-md-6">
+        <label>Pay-grade</label>
+       <select class="form-control">
+         <option>Select Pay-grade</option>
+       </select>
+      </div>
+      <div class="form-group col-md-6">
+        <label>No. Of Increment </label>
+        <input type="number" class="form-control">
+      </div>
+
+      <div class="form-group col-md-6">
+        <button class="btn btn-sm btn-success">Update</button>
+      </div>
+
+    </div>
+
+
+  </div>
+</div>
+
+
+<br>
+<div class="card">
+  <div class="card-header">
     Salary Salary Sheet
   </div>
 
   <div class="card-body">
-    <!--<div class="row">-->
-      <!--<div class="form-group col-md-6">-->
-        <!--<label>Consolidated Salary</label>-->
-        <!--<input type="text" name="consolidatedSalary" placeholder="salary"  [(ngModel)]="employeeSalaryForm.consolidatedSalary" class="form-control">-->
-      <!--</div>-->
-
-      <!--<div class="form-group col-md-6">-->
-        <!--<label>Payroll</label>-->
-        <!--<input type="text" name="payroll" placeholder="payroll" [(ngModel)]="employeeSalaryForm.payroll" class="form-control">-->
-      <!--</div>-->
-      <!--<div class="col-md-12">-->
-        <!--<button class="btn btn-success" (click)="submit()">Save</button>-->
-      <!--</div>-->
-
-
-
-    <!--</div>-->
 
     <div class="row">
       <div class="col-md-12">
